--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>metal.github.io</title>
+  <title>SHADEEX.XYZ</title>
   
   <link rel='stylesheet prefetch' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/style.css'>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="metal.css">
+  <link rel="stylesheet" href="shadeex.css">
   
-  <style type="text/css">body, a, a:link{cursor:url(metal-arrow.png), default;} a:hover {cursor:url(arrow.png),wait;}</style>
+  <style type="text/css">body, a, a:link{cursor:url(shadeex-arrow.png), default;} a:hover {cursor:url(arrow.png),wait;}</style>
   
 </head>
 <body>
 
 <audio autoplay="1" loop="-1" volume="0.5">
-	<source src="metal.mp3" type="audio/mp3">
+	<source src="shadeex.mp3" type="audio/mp3">
 </audio>
 
 <div id="initial-loader" class="padded"><span id="loader-text"></span></div>
@@ -23,23 +23,23 @@
 
 	<section id="page-structure" class="ajax">	
 		<nav class="padded">
-			<aclass="dJAX_internal"><img src="metallogo.png" id="nclud-logo" alt="METAL"></a>		
-			<li><h4> METAL.GITHUB.IO</h4></li></ul>
+			<aclass="dJAX_internal"><img src="shadeexlogo.png" id="nclud-logo" alt="By ShadeEX"></a>		
+			<li><h4> SHADEEX.XYZ</h4></li></ul>
 		</nav>
 		<header class="eliza height-95 black">
 			<div class="header-text grid_row padded-horizontal">
 				<div class="grid1">
 					<h3> My Contacts :</h3> 
-					<h4> Skype: Yaroslav11846C </h4> <br> <h4> Steam: grobtop </h4> <br> <h4> VK ID: idyouface </h4>			
+					<h4> Skype: HS.BOG </h4> <br> <h4> Steam: shadeexbomj </h4> <br> <h4> VK ID: iamshadeex </h4>			
 				</div>	
 				<div class="grid3" style="padding-top: 5%;">
 					<h3> My FRIENDS :</h3> 
-					<h4>H://Shox</h4> <br> <h4>T://no</h4> <br> <h4>T://no \m/</h4> <br> <h4>P://no</h4>
+					<h4>H://Shox</h4> <br> <h4>T://Cabra777</h4> <br> <h4>T://fanatMetala \m/</h4> <br> <h4>P://WeeR</h4>
 				</div>	
 			</div>
 			
 		</header>
-		<div id='metal'><h3> > > ziter011@gmail.com < < </h3></div>
+		<div id='shadeex'><h3> > > shadeexmain@mail.ru < < </h3></div>
 	</section>
 	
 
@@ -48,7 +48,7 @@
 		<div id='fuck'></div>
 		<div id='you'></div>
 		<div id='life'></div>
-		<img id="image" src="metal-death.png">
+		<img id="image" src="shadeex-anime.png">
 	</div>
 	
 </div>
@@ -66,8 +66,8 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/GlitchPass.js'></script>
 
-<script src="metal-glitch.js"></script>
-<script src="metal-anti-copy.js"></script>
+<script src="shadeex-glitch.js"></script>
+<script src="shadeex-anti-copy.js"></script>
 </body>
 
 
