--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
-<!DOCTYPE HTML>
-<html lang="en-us">
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8">
-<title>metal</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="megadeal">
-<meta name="keywords" content="metal, metal">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-<link type="text/css" id="main" href="css/metal.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>metal.github.io</title>
+  
+  <link rel='stylesheet prefetch' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/style.css'>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="metal.css">
+  
+  <style type="text/css">body, a, a:link{cursor:url(metal-arrow.png), default;} a:hover {cursor:url(arrow.png),wait;}</style>
+  
 </head>
 <body>
-<div id="wrapper">
-<div id="cover" class="video-bg">
-<div class="colour-overlay"></div>
-<div class="net-overlay"></div>
-<div class="float-cover-content">
-<div class="text-soon">
-<p class="pri">mega<span>deal</span></p>
+
+<audio autoplay="1" loop="-1" volume="0.5">
+	<source src="metal.mp3" type="audio/mp3">
+</audio>
+
+<div id="initial-loader" class="padded"><span id="loader-text"></span></div>
+
+<div id="main-body">
+
+	<section id="page-structure" class="ajax">	
+		<nav class="padded">
+			<aclass="dJAX_internal"><img src="metallogo.png" id="nclud-logo" alt="METAL"></a>		
+			<li><h4> METAL.GITHUB.IO</h4></li></ul>
+		</nav>
+		<header class="eliza height-95 black">
+			<div class="header-text grid_row padded-horizontal">
+				<div class="grid1">
+					<h3> My Contacts :</h3> 
+					<h4> Skype: Yaroslav11846C </h4> <br> <h4> Steam: grobtop </h4> <br> <h4> VK ID: idyouface </h4>			
+				</div>	
+				<div class="grid3" style="padding-top: 5%;">
+					<h3> My FRIENDS :</h3> 
+					<h4>H://Shox</h4> <br> <h4>T://no</h4> <br> <h4>T://no \m/</h4> <br> <h4>P://no</h4>
+				</div>	
+			</div>
+			
+		</header>
+		<div id='metal'><h3> > > ziter011@gmail.com < < </h3></div>
+	</section>
+	
+
+	
+	<div id="canvas">
+		<div id='fuck'></div>
+		<div id='you'></div>
+		<div id='life'></div>
+		<img id="image" src="metal-death.png">
+	</div>
+	
 </div>
-<div class="cta-btn">
-<a href="https://vk.com/idyouface" class="btn btn-fyre cta" id="fyre-cta-btn">VK</a>
-<a href="https://t.me/g4mait" class="btn btn-fyre cta" id="fyre-cta-btn">TELEGRAM</a>
-<a href="http://steamcommunity.com/id/grobtop/" class="btn btn-fyre cta" id="fyre-cta-btn">STEAM</a>
-</div>
-<video id="song_id" autoplay loop>
-<source src="videos/wow.mp4">
-</video>
-</div>
-</div>
-</div>
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-<script src="static/js/libs/jquery.min.js"></script>
-<script src="static/js/libs/tether.min.js"></script>
-<script src="static/js/libs/bootstrap.min.js"></script>
-<script type="text/javascript" src="static/js/libs/particles.min.js"></script>
-<script type="text/javascript" src="static/js/libs/bootstrap-slider.min.js"></script>
-<script type="text/javascript" src="static/js/fyre.js"></script>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/CopyShader.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/03_glitch.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/EffectComposer.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/RenderPass.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/ShaderPass.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/MaskPass.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/08_texturepass.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/GlitchPass.js'></script>
+
+<script src="metal-glitch.js"></script>
+<script src="metal-anti-copy.js"></script>
 </body>
+
+
 </html>
