--- a/index.html
+++ b/index.html
@@ -1,74 +1,90 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>metal.github.io</title>
-  
-  <link rel='stylesheet prefetch' href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/style.css'>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="metal.css">
-  
-  <style type="text/css">body, a, a:link{cursor:url(metal-arrow.png), default;} a:hover {cursor:url(arrow.png),wait;}</style>
-  
-</head>
-<body>
-
-<audio autoplay="1" loop="-1" volume="0.5">
-	<source src="metal.mp3" type="audio/mp3">
-</audio>
-
-<div id="initial-loader" class="padded"><span id="loader-text"></span></div>
-
-<div id="main-body">
-
-	<section id="page-structure" class="ajax">	
-		<nav class="padded">
-			<aclass="dJAX_internal"><img src="metallogo.png" id="nclud-logo" alt="METAL"></a>		
-			<li><h4> METAL.GITHUB.IO</h4></li></ul>
-		</nav>
-		<header class="eliza height-95 black">
-			<div class="header-text grid_row padded-horizontal">
-				<div class="grid1">
-					<h3> My Contacts :</h3> 
-					<h4> Skype: Yaroslav11846C </h4> <br> <h4> Steam: grobtop </h4> <br> <h4> VK ID: idyouface </h4>			
-				</div>	
-				<div class="grid3" style="padding-top: 5%;">
-					<h3> My FRIENDS :</h3> 
-					<h4>H://Shox</h4> <br> <h4>T://no</h4> <br> <h4>T://no \m/</h4> <br> <h4>P://no</h4>
-				</div>	
-			</div>
-			
-		</header>
-		<div id='metal'><h3> > > ziter011@gmail.com < < </h3></div>
-	</section>
-	
-
-	
-	<div id="canvas">
-		<div id='fuck'></div>
-		<div id='you'></div>
-		<div id='life'></div>
-		<img id="image" src="metal-death.png">
-	</div>
-	
-</div>
-
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/CopyShader.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/03_glitch.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/EffectComposer.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/RenderPass.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/ShaderPass.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/MaskPass.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/141552/08_texturepass.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-18/GlitchPass.js'></script>
-
-<script src="metal-glitch.js"></script>
-<script src="metal-anti-copy.js"></script>
-</body>
-
-
+<title>Metal</title>
 </html>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="metal">
+	<meta name="description" content="metal" />
+	<meta name="keywords" content=""/>
+	<meta name="robots" content="index, follow"> 
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Oswald" rel="stylesheet">
+	<link rel="stylesheet" href="assets/fonts/font-awesome.css" >
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/trackpad-scroll-emulator.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/vegas.min.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/mailform.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/canvas.css" type="text/css">
+		<link rel="shortcut icon" href="favicon.ico" type="text/img">
+
+</head>
+
+<body>
+    <div id="preload">
+		<div id="preload-content">
+			<div class="preload-spinner">
+				<div class="tp-loader spinner"></div>
+				
+			</div>
+		</div>
+	</div>
+	<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+</div>
+ 
+<div class="collapse navbar-collapse activem" id="bs-example-navbar-collapse-1">
+<ul class="nav navbar-nav">
+<li><a href="skype:live:ziter011" class="activem">Skype</a></li>
+<li class="activem" data-menu="0"><a href="https://vk.com/idyouface">VK</a></li>
+<li class="activem" data-menu="0"><a href="t.me/g4mait">Telegram</a></li>
+<li class="activem" data-menu="0"><a href="http://steamcommunity.com/id/grobtop">Steam</a></li>
+</div> 
+<div id="outer-wrapper" class="animate translate-z-in">
+    <div id="inner-wrapper">
+        <div id="table-wrapper">
+            <div class="container center">
+                <div id="row-content">
+                    <div id="content-wrapper">
+                        <div id="content" class="animate translate-z-in animation-time-2s delay-1-5s">
+                            <img src="assets/img/metallogo.png" ></a>
+							<h3>что выше космоса?</h3>
+							<h2>только мое высокомерие :)</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="background-wrapper overlay">
+           <canvas class="p-canvas-webgl opacity-50" id="canvas-webgl"></canvas>
+        </div>
+    </div>
+</div>
+</div>
+</section>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="backdrop"></div>
+<script src="assets/js/glitch.js"></script>
+<script type="text/javascript" src="assets/js/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery.plugin.min.js"></script>
+<script type="text/javascript" src="assets/js/custom.js"></script>
+<script src='assets/js/three.min.js'></script>
+<audio src="music.mp3" autoplay="autoplay" loop="loop">
